- Added delete image - Fixed visibility bug (was hiding items that only remote peers had) - Added delete functionality to feed

--- a/search-ui/resources/public/css/style.css
+++ b/search-ui/resources/public/css/style.css
@@ -59,3 +59,11 @@ body {
     font-size: 14px;
     color: grey;
 }
+
+.delete-entity {
+    cursor: pointer;
+}
+
+.request-error {
+    color: red;
+}
